--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
 	font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   }
   .navbar {
-	background-color: white;
+	background-color: #800020;
 	font-size: 25px; 
   }
   .active, .dropdown-menu .dropdown-item:active a:hover {
@@ -117,7 +117,7 @@ body {
   /* Media Queries */
   @media(max-width: 992px) {
 	.navbar-expand-lg {
-	background-color: #213159 !important;
+	background-color: white !important;
 	}
 	.navbar {
 	  max-height: none;
