--- a/style.css
+++ b/style.css
@@ -9,7 +9,8 @@ body {
 	background-repeat: no-repeat;
 	background-size: cover;
   }
-  
+
+
   /* Navbar */
   .navbar {
   max-height: 60px;
@@ -46,6 +47,10 @@ body {
   a {
 	color: #E7E7E7;
 	font-size: 15px;
+  }
+
+  .navbar-light .navbar-nav .nav-link {
+    color: white;
   }
   
   /* Images */
@@ -110,6 +115,7 @@ body {
   width: 100%;
   padding-top: 15px;
   }
+
   
   /* Media Queries */
   @media(max-width: 992px) {
