--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 
 /* Body */
 body {
-  background-image:url('linear_background.png')
+  background-image:url('linear_background.png');
 	height:850px;
 	background-position: center;
 	background-repeat: no-repeat;
