--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 
 /* Body */
 body {
-  background-image:url('WebVisulization/Resources/assets/images/linear_background.png');
+  background-image:url('WebVisulization/Resources/assets/images/moving_background.gif');
 	height:850px;
 	background-position: center;
 	background-repeat: no-repeat;
